style: :lipstick: Added css code
Added css code to the index.card and infoItem styles

--- a/src/components/Card/card.component.css
+++ b/src/components/Card/card.component.css
@@ -1,11 +1,8 @@
-<div>
-         <div>
-            <img src="../../../public/assets/camisaBlanca.jpg" />   
-         </div>
-         <div>
-            <h2>T-Shirt</h2>
-            <p>A WHite t-shirt</p>
-            <h2><strong>$35</strong></h2>
-         </div>
-         <button>Add to Cart</button>
-      </div>
+*{
+   margin: 0;
+   padding: 0;
+}
+
+.cartas{
+   display: flex;
+}
