--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,21 @@ body{
    align-items: center;
    margin: auto;
 }
+
+.main h1{
+   margin-top: 8rem;
+}
+
+.main{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin: auto;
+   font-size: 1.5rem;
+   gap: 5rem;
+}
+
+.AlltheCard{
+   display: flex;
+}
